@@ -4,6 +4,7 @@ import com.example.HotelManagement.enums.ImageTypes;
 import com.example.HotelManagement.model.Gallery;
 import com.example.HotelManagement.model.RoomType;
 import com.example.HotelManagement.repository.GalleryRepository;
+import com.example.HotelManagement.repository.TypeRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -15,34 +16,20 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
+import java.util.HashMap;
 import java.util.List;
+import java.util.Map;
 
 @Service
 public class GalleryService {
     private final String root = "src/main/resources/static/images/";
     @Autowired
     private GalleryRepository galleryRepository;
+    @Autowired
+    private TypeRepository typeRepository;
 
-    public List<byte[]> getAllImages() throws IOException {
-        List<Gallery> galleries = galleryRepository.findAll();
-        List<byte[]> imageBytes = new ArrayList<>();
-
-        for (Gallery gallery : galleries) {
-            String imageUrl = gallery.getImage_url();
-            if (!imageUrl.isEmpty()) {
-                try {
-                    byte[] imageData = getImage(imageUrl);
-                    imageBytes.add(imageData);
-                } catch (IOException e) {
-                    System.err.println("Error fetching image from URL: " + imageUrl);
-                    e.printStackTrace();
-                }
-            } else {
-                System.err.println("Invalid image URL for gallery: " + gallery.getId());
-            }
-        }
-
-        return imageBytes;
+    public List<Gallery> getAllImages() throws IOException {
+        return galleryRepository.findAll();
     }
 
     public Gallery save(String typeString, String fileName, MultipartFile multipartFile) throws IOException {
@@ -66,26 +53,34 @@ public class GalleryService {
         return galleryRepository.save(image);
     }
 
-    //TODO: Delete previous image
     public Gallery updatePreviewImageForRoom(RoomType roomType, String fileName, String format, MultipartFile multipartFile) throws IOException {
         Gallery image = new Gallery();
         Path uploadPath = Paths.get(root);
         if (!Files.exists(uploadPath)) {
             Files.createDirectories(uploadPath);
         }
+
+        Gallery existingImage = roomType.getPreviewImage();
+        if (existingImage != null) {
+            roomType.setPreviewImage(null);
+            String existingImagePath = existingImage.getImage_url();
+            deleteImage(existingImage, existingImagePath); //delete existing image
+        }
+
         try (InputStream inputStream = multipartFile.getInputStream()) {
             Path filePath = uploadPath.resolve(fileName);
             Files.copy(inputStream, filePath, StandardCopyOption.REPLACE_EXISTING);
         } catch (IOException ioe) {
             throw new IOException("Could not save image file: " + fileName, ioe);
         }
+
         image.setImage_url(uploadPath + "/" + fileName);
         image.setRoomType(roomType);
         image.setImage_format(format);
         image.setImage_type(ImageTypes.ACCOMMODATIONS); //default image_type for room
+
         return galleryRepository.save(image);
     }
-
 
     public void saveRoomTypeImages(RoomType roomType, String fileName, String format, MultipartFile multipartFile) throws IOException {
         Gallery image = new Gallery();
@@ -116,15 +111,11 @@ public class GalleryService {
         }
     }
 
-
-    public Boolean deleteImage(Long id, String imageDirectory, String imageName) throws IOException {
-        galleryRepository.deleteById(id);
-        Path imagePath = Path.of(imageDirectory, imageName);
-        if (Files.exists(imagePath)) {
-            Files.delete(imagePath);
-            return true;
-        } else {
-            return false; // Handle missing images
+    public void deleteImage(Gallery existingImage, String imageDirectory) throws IOException {
+        Path existingImagePath = Paths.get(imageDirectory);
+        if (Files.exists(existingImagePath)) {
+            Files.delete(existingImagePath);
+            galleryRepository.delete(existingImage);
         }
     }
 }
